# cryptoEncoder

./: CMakeLists.txt  README.md
src/: ascii_to_dec.cpp  main.cpp  pairs.cpp  single.cpp
